# py-monorepo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
modules/module-a/: pyproject.toml
modules/module-a/src/module_a/: service.py
modules/module-a/tests/: test_module_a.py
modules/module-b/: pyproject.toml
modules/module-b/tests/: test_module_b.py
projects/project-a/: pyproject.toml
projects/project-a/modules/module-a/src/module_a/: service.py
projects/project-a/modules/module-a/tests/: test_module_a.py
projects/project-a/modules/module-b/: pyproject.toml
projects/project-a/modules/module-b/tests/: test_module_b.py
projects/project-b/: pyproject.toml
projects/project-b/modules/module-c/: pyproject.toml
projects/project-b/modules/module-c/src/module_c/: service.py
projects/project-b/modules/module-c/tests/: test_module_c.py
projects/project-b/modules/module-d/: pyproject.toml
projects/project-b/modules/module-d/tests/: test_module_d.py
projects/project-c/: README.md  pyproject.toml
projects/project-c/tests/: test_project_c.py
src/monorepo/: test.py
