[project]
name = "monorepo"
version = "0.1.0"
description = ""
authors = [
    {name = "sha1n", email = "sha1n@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"

[tool.pytest.ini_options]
addopts = "--strict-markers"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "PL" # pylint
]
lint.ignore = [
    "E501", # line too long, handled by black
    "PLR2004", # Magic value used in comparison
    "B008", # do not perform function calls in argument defaults
    "W291", # trailing whitespace
]
