[tool.poetry]
name = "project-c"
version = "0.1.0"
description = ""
authors = ["sha1n <sha1n@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "project_c", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
project-a = { path = "../project-a", develop = true }
project-b = { path = "../project-b", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
