[tool.poetry]
name = "module-b"
version = "0.1.0"
description = ""
authors = ["sha1n <sha1n@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
module-a = {path = "../module-a"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
