[tool.poetry]
name = "module-d"
version = "0.1.0"
description = ""
authors = ["sha1n <sha1n@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
module-c = {path = "../module-c"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
